# terminado

./: .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.rst  COPYING  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  RELEASE.md  appveyor.yml  package.json  pyproject.toml  run-tests.sh  setup.cfg  setup.py  tornado_xstatic.py  tox.ini  xstatic_file_handler.py
.github/: dependabot.yml
.github/workflows/: check-release.yml  test.yml
demos/: README.md  common_demo_stuff.py  custom_exec.py  named.py  requirements.txt  single.py  sslcerts.py  uimod.py  unique.py
demos/templates/: termpage.html  uimod.html
doc/: Makefile  conf.py  index.rst  releasenotes.rst  requirements.txt  uimodule.rst  websocket.rst
pyxterm/: common_demo_stuff.py  demo_multi.py  demo_single.py  demo_unique.py  pyxshell.py  pyxterm.py  sslcerts.py
pyxterm/_static/: index.html  pyxterm.js
pyxterm/templates/: termpage.html
terminado/: __init__.py  _version.py  management.py  terminals.py  uimod_embed.js  uimodule.py  websocket.py
terminado/_static/: package.json  terminado-xtermjs.bundle.js  terminado-xtermjs.js  terminado.js
terminado/formats/: __init__.py  format.py  json.py  lightpayload.py  messagepack.py
terminado/tests/: basic_test.py  test_basic.py  test_basic_py3.py
tests/: basic_test.py
