[metadata]
name = terminado
version = attr: terminado.__init__.__version__
author = "Jupyter Development Team"
author_email = "jupyter@googlegroups.com"
url = "https://github.com/jupyter/terminado"
description = "Tornado websocket backend for the Xterm.js Javascript terminal emulator library."
description_file = README.rst
long_description_content_type = "text/x-rst"
python_requires=">=3.6"
classifier = [
    "Environment :: Web Environment"
    "License :: OSI Approved :: BSD License"
    "Programming Language :: Python :: 3"
    "Topic :: Terminals :: Terminal Emulators/X Terminals"

[options]
include_package_data = True
packages = find:
install_requires =
    ptyprocess;os_name!='nt'
    pywinpty (>=1.1.0);os_name=='nt'
    tornado (>=4)

[options.extras_require]
    test=pytest
