[metadata]
name = terminado
version = attr: terminado.__init__.__version__
author = Jupyter Development Team
author_email = jupyter@googlegroups.com
url = https://github.com/jupyter/terminado
description = Tornado websocket backend for the Xterm.js Javascript terminal emulator library.
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Environment :: Web Environment
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Topic :: Terminals :: Terminal Emulators/X Terminals

[options]
include_package_data = True
packages = find:
python_requires= >=3.7
install_requires =
    ptyprocess;os_name!='nt'
    pywinpty (>=1.1.0);os_name=='nt'
    tornado (>=4)

[options.extras_require]
test=
    pytest
    pre-commit

[flake8]
ignore = E501, W503, E402
builtins = c, get_config
exclude =
    .cache,
    .github,
    docs,
    setup.py
enable-extensions = G
extend-ignore =
    G001, G002, G004, G200, G201, G202,
    # black adds spaces around ':'
    E203,
per-file-ignores =
    # B011: Do not call assert False since python -O removes these calls
    # F841 local variable 'foo' is assigned to but never used
    tests/*: B011, F841
